# docsfy

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  UI-TESTS-RESULTS.md  ai-cli-integration.html  ai-cli-integration.md  ai-generation-pipeline.html  ai-generation-pipeline.md  ai-provider-setup.html  ai-provider-setup.md  ai-providers.html  ai-providers.md  api-docs-serving.html  api-docs-serving.md  api-download-and-delete.html  api-download-and-delete.md  api-download.html  api-download.md  api-generate.html  api-generate.md  api-generation.html  api-generation.md  api-health-and-docs.html  api-health-and-docs.md  api-health.html  api-health.md  api-overview.html  api-overview.md  api-projects-delete.html  api-projects-delete.md  api-projects-download.html  api-projects.html  api-projects.md  (+82 more)
assets/: copy.js  scrollspy.js  style.css  theme.js
docs/: admin-api.html  admin-api.md  ai-provider-setup.html  ai-provider-setup.md  api-reference.html  api-reference.md  architecture-and-runtime.html  architecture-and-runtime.md  auth-api.html  auth-api.md  authentication-and-roles.html  authentication-and-roles.md  browsing-docs.html  browsing-docs.md  cli-command-reference.html  cli-command-reference.md  cli-configuration.html  cli-configuration.md  cli-reference.html  cli-reference.md  cli-workflows.html  cli-workflows.md  configuration-reference.html  configuration-reference.md  configure-ai-providers-and-models.html  configure-ai-providers-and-models.md  configure-ai-providers.html  configure-ai-providers.md  configuring-ai-providers.html  configuring-ai-providers.md  data-storage-and-layout.html  data-storage-and-layout.md  deployment-and-runtime.html  deployment-and-runtime.md  deployment.html  deployment.md  docker-quickstart.html  docker-quickstart.md  environment-variables.html  environment-variables.md  (+82 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
sidecar-helper/: package-lock.json  package.json
test-plans/: e2e-01-auth-and-roles.md  e2e-02-generation-and-dashboard.md  e2e-03-docs-quality-and-ui.md  e2e-04-isolation-and-auth.md  e2e-05-incremental-updates.md  e2e-06-delete-and-owner.md  e2e-07-ui-components.md  e2e-08-cross-model-updates.md  e2e-09-cleanup.md  e2e-10-branch-support.md  e2e-11-websocket.md  e2e-12-cli.md  e2e-13-post-generation-pipeline.md  e2e-14-models-command.md  e2e-15-repo-type.md  e2e-ui-test-plan.md
tests/: conftest.py  test_ai_client.py  (+20 more)
(+113 files in other folders)
